--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,3 +2,15 @@ spring.datasource.url= jdbc:postgresql://localhost:5432/toDo
 spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto = update 
+
+
+#spring-boot-starter-mail properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL_LOGIN}
+spring.mail.password=${EMAIL_SENHA}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.enable=false
+spring.mail.test-connection=true
