--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/toDo
 spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.password=12345678
 spring.jpa.hibernate.ddl-auto = update 
 
 
